@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
 
+- Adjusted WCS GetCapabilities for an empty list of layers (#4140)
+
 - Adjusted WMS GetCapabilities for an empty list of layers (#3755)
 
 - Refactor cgi masperv to not call exit on argument errors (#3099)
